# android-import-dll

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/project/testdll/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  testdll.cpp
app/src/main/cpp/libDll/: Dll1.lib
app/src/main/java/com/project/testdll/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/project/testdll/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
